--- a/social-enterprise-app-case-study.html
+++ b/social-enterprise-app-case-study.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="shortcut icon" type="image/png" href="images/logo-face-favicon2.png"/>
+
 	</head>
 	<body class="is-preload">
 
@@ -136,11 +138,11 @@
                                         
                                       <!-- Feedback Time -->  
                                            <div style="text-align: center; padding-top: 5%; padding-bottom: 3%; background-color: rgba(95,191,234, 0.07);">
-                                               <h2 style="">Feedback Time</h2><br />
-                                               <h3 id="content">3. User Testing</h3>
+                                               <h2 style="color: #5fbfea;">Feedback Time</h2><br />
+                                               <h3 style="color: #5fbfea;" id="content">3. User Testing</h3>
                                                 <div style="width: 40%; text-align: center; margin: 0 auto;"><p>To uncover usability issues early on, test sessions were set up with 3 people to test the prototype. </p></div>
                                                <hr style="width: 10%; margin: 0 auto;"><br />
-                                               <h3 id="content">4. Client Feedback and Iterate</h3>
+                                               <h3 style="color: #5fbfea;" id="content">4. Client Feedback and Iterate</h3>
                                                <div style="width: 40%; text-align: center; margin: 0 auto;"><p>Checking in with the client and iterating based on overall feedback. It’s also time to look into edge cases.</p></div>
                                             </div>
                                             <br /><br /><br /><br /><br />
