--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hey, I'm Jenny!<br />
-											I design stuff.</h1>
-											<p>Yep, that's me.</p>
+											<h1>Jenny Tang</h1>
+                                            <h4>UX &middot; UI &middot; GRAPHIC</h4>
 										</header>
-										<p>To be specific, I do <strong>UX, UI and Interaction design.</strong><br />Sometimes <strong>branding</strong>. <br /><br />But really, anything design related, I'm in! &#128077;</p>
+										<p>I'm a generalist designer who enjoys learning new skills and tools, to challenge myself and to stay-up-to-date with the ever changing tech world. I'm also a tech enthusiast and a foodie who's always inspired by the amazing innovation and creativity that's out there. </p>
 <!--
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
