--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										<article>
 											<a href="ux-projects-overview.html" class="image"><img  src="images/overview-ux-thumbnail.jpg" alt="" /></a>
 											<h3>Overview: Before I Start A Project</h3>
-											<p>I like to cover my bases before I jump into a project.</p>
+											<p>I like to cover my bases before I jump into a project</p>
 											<ul class="actions">
 												<li><a href="ux-projects-overview.html" class="button">View</a></li>
 											</ul>
@@ -71,7 +71,7 @@
                                         <article>
 											<a href="health-service-app-case-study.html" class="image"><img src="images/health-service-app-thumbnail.jpg" alt="" /></a>
 											<h3>Health Service App</h3>
-											<p>A focus on providing health services through a mobile app.</p>
+											<p>A focus on providing health services through a mobile app</p>
 											<ul class="actions">
 												<li><a href="health-service-app-case-study.html" class="button">View</a></li>
 											</ul>
@@ -79,7 +79,7 @@
                                         <article>
 											<a href="social-enterprise-app-case-study.html" class="image"><img src="images/social-enterprise-app-thumbnail.jpg" alt="" /></a>
 											<h3>Social Enterprise App</h3>
-											<p>Not-for-profit social enterprise web app for older demographics.</p>
+											<p>Not-for-profit social enterprise web app for older demographics</p>
 											<ul class="actions">
 												<li><a href="social-enterprise-app-case-study.html" class="button">View</a></li>
 											</ul>
@@ -87,9 +87,17 @@
 										<article>
 											<a href="food-app-case-study.html" class="image"><img src="images/food-app-thumbnail.jpg" alt="" /></a>
 											<h3>Food App</h3>
-											<p>Mobile app for consumers & businesses to buy & sell services.</p>
+											<p>Mobile app for consumers & businesses to buy & sell services</p>
 											<ul class="actions">
 												<li><a href="food-app-case-study.html" class="button">View</a></li>
+											</ul>
+										</article>
+                                        <article>
+											<a href="bitnational-app.html" class="image"><img src="images/bitcoins.jpg" alt="" /></a>
+											<h3>Bitnational</h3>
+											<p>Cryptocurrency exchange network</p>
+											<ul class="actions">
+												<li><a href="bitnational-app.html" class="button">View</a></li>
 											</ul>
 										</article>
 									</div>
@@ -197,6 +205,7 @@
 												<li><a href="health-service-app-case-study.html">Health Service App</a></li>
 												<li><a href="social-enterprise-app-case-study.html">Social Enterprise App</a></li>
 												<li><a href="food-app-case-study.html">Food App</a></li>
+                                                <li><a href="bitnational-app.html">Bitnational</a></li>
 											</ul>
 										</li>
 										<li>
