--- a/ui-projects.html
+++ b/ui-projects.html
@@ -102,6 +102,7 @@
 												<li><a href="health-service-app-case-study.html">Health Service App</a></li>
 												<li><a href="social-enterprise-app-case-study.html">Social Enterprise App</a></li>
 												<li><a href="food-app-case-study.html">Food App</a></li>
+                                                <li><a href="bitnational-app.html">Bitnational</a></li>
 											</ul>
 										</li>
 										<li>
