--- a/absorb-atomic-design.html
+++ b/absorb-atomic-design.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jenny Tang's Portfolio</title>
+		<title>Jenny Tang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -117,6 +117,7 @@
 												<li><a href="health-service-app-case-study.html">Health Service App</a></li>
 												<li><a href="social-enterprise-app-case-study.html">Social Enterprise App</a></li>
 												<li><a href="food-app-case-study.html">Food App</a></li>
+                                                <li><a href="bitnational-app.html">Bitnational</a></li>
 											</ul>
 										</li>
 										<li>
@@ -152,6 +153,7 @@
 <!--									<li class="icon solid fa-home">Calgary, AB</li>-->
 									</ul>
 								</section>
+                            
 
 							<!-- Footer -->
 								<footer id="footer">
