--- a/branding-projects.html
+++ b/branding-projects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jenny Tang's Portfolio</title>
+		<title>Jenny Tang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Jenny Tang's</strong> portfolio</a>
+									<a href="index.html" class="logo">Jenny Tang</a>
 <!--
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -110,6 +110,7 @@
 												<li><a href="health-service-app-case-study.html">Health Service App</a></li>
 												<li><a href="social-enterprise-app-case-study.html">Social Enterprise App</a></li>
 												<li><a href="food-app-case-study.html">Food App</a></li>
+                                                <li><a href="bitnational-app.html">Bitnational</a></li>
 											</ul>
 										</li>
 										<li>
