--- a/index.html
+++ b/index.html
@@ -71,29 +71,17 @@
 											</ul>
 										</article>
                                         <article>
-<<<<<<< HEAD
 											<a href="seequent-web-visualization-case-study.html" class="image"><img src="images/web-viz-ui-thumbnail.png" alt="" /></a>
 											<h3>Seequent</h3>
 											<p>Web 3D visualization tool for geological data</p>
-=======
-											<a href="health-service-app-case-study.html" class="image"><img src="images/health-service-app-thumbnail.jpg" alt="" /></a>
-											<h3>Health Service App</h3>
-											<p>A focus on providing health services through a mobile app</p>
->>>>>>> 630f5d2c6041e9e279b4d1ba37ed6044347bf53a
 											<ul class="actions">
 												<li><a href="seequent-web-visualization-case-study.html" class="button">View</a></li>
 											</ul>
 										</article>
                                         <article>
-<<<<<<< HEAD
 											<a href="bitnational-app.html" class="image"><img src="images/bitnational.png" alt="" /></a>
 											<h3>Bitnational</h3>
 											<p>Cryptocurrency exchange network</p>
-=======
-											<a href="social-enterprise-app-case-study.html" class="image"><img src="images/social-enterprise-app-thumbnail.jpg" alt="" /></a>
-											<h3>Social Enterprise App</h3>
-											<p>Not-for-profit social enterprise web app for older demographics</p>
->>>>>>> 630f5d2c6041e9e279b4d1ba37ed6044347bf53a
 											<ul class="actions">
 												<li><a href="bitnational-app.html" class="button">View</a></li>
 											</ul>
@@ -107,7 +95,6 @@
 											</ul>
 										</article>
                                         <article>
-<<<<<<< HEAD
 											<a href="social-enterprise-app-case-study.html" class="image"><img src="images/social-enterprise-app-thumbnail.jpg" alt="" /></a>
 											<h3>InterGen Connect Technology Platform</h3>
 											<p>Connecting scaling companies with business talent</p>
@@ -121,15 +108,8 @@
 											<p>A focus on providing health services through a mobile app</p>
 											<ul class="actions">
 												<li><a href="health-service-app-case-study.html" class="button">View</a></li>
-=======
-											<a href="bitnational-app.html" class="image"><img src="images/bitcoins.jpg" alt="" /></a>
-											<h3>Bitnational</h3>
-											<p>Cryptocurrency exchange network</p>
-											<ul class="actions">
-												<li><a href="bitnational-app.html" class="button">View</a></li>
->>>>>>> 630f5d2c6041e9e279b4d1ba37ed6044347bf53a
-											</ul>
-										</article>
+                                            </ul>
+                                        </article>
 									</div>
 								</section>
 
@@ -235,12 +215,7 @@
                                                 <li><a href="seequent-web-visualization-case-study.html">Seequent 3D Web Visualization</a></li>
                                                 <li><a href="bitnational-app.html">Bitnational</a></li>
                                                 <li><a href="social-enterprise-app-case-study.html">InterGen Connect Technology Platform</a></li>
-												<li><a href="food-app-case-study.html">Food App</a></li>
-<<<<<<< HEAD
-                                                <li><a href="health-service-app-case-study.html">Health Service App</a></li>
-=======
-                                                <li><a href="bitnational-app.html">Bitnational</a></li>
->>>>>>> 630f5d2c6041e9e279b4d1ba37ed6044347bf53a
+												<li><a href="food-app-case-study.html">Food App</a></li>                                               <li><a href="health-service-app-case-study.html">Health Service App</a></li>
 											</ul>
 										</li>
 										<li>
