update intro and 'info' spelling

--- a/bmo-radicle-service-design-blueprint-case-study.html
+++ b/bmo-radicle-service-design-blueprint-case-study.html
@@ -71,11 +71,11 @@
                                                 </tr>
                                                 <tr>
                                                     <td><strong>Challenges</strong></td>
-                                                    <td>Collecting, dissecting and organizing the info in a clear manner was challenging. This is due to the fact that the service providers had different interpretations of what their process was like. The process can also vary by client.</td>
+                                                    <td>Collecting, dissecting and organizing the information in a clear manner was challenging. This is due to the fact that the service providers had different interpretations of what their process was like. The process can also vary by client.</td>
                                                 </tr>
                                                 <tr>
                                                     <td><strong>Learnings</strong></td>
-                                                    <td>Includes breaking down a blueprint to complete in chunks when the process can be complicated, to seek out different ways to collect info and reduce meetings, and the importance of educating others on my role and the purposes of a blueprint.</td>
+                                                    <td>Includes breaking down a blueprint to complete in chunks when the process can be complicated, to seek out different ways to collect information and reduce meetings, and the importance of educating others on my role and the purposes of a blueprint.</td>
                                                 </tr>
                                                 <tr>
                                                     <td><strong>Tool(s)</strong></td>
@@ -95,7 +95,7 @@
                                     <ul>
                                         <li>Put together a blueprint template on Miro</li>
                                         <li>Interview product and service providers to fill in the template</li>
-                                        <li>Distill, organize and summarize the info</li>
+                                        <li>Distill, organize and summarize the information</li>
                                         <li>Put a story together to help explain and educate the product team meeting on findings and gaps we have to build a better service and client experience</li>
                                         <li>Participated in a lunch and learn to educate on service design and the value of it</li>
                                     </ul>
