--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 											<h1>Jenny Tang</h1>
                                             <h4>PRODUCT &middot; SERVICE DESIGN &middot; UX &middot; UI</h4>
 										</header>
-										<p>Hi there! I'm a designer who enjoys designing product solutions that focus on removing complexity and creating simple experiences for all users involved. I'm experienced in creating multi-user workflows that take into consideration the overlapping experiences that can often occur with modern software today.
-                                        Often times I collaborate with product to support the product strategy and vision, while providing design input and research findings to refine the strategy to better support the user experience.</p>
+										<p>Hi there! I'm a designer who enjoys designing product solutions that focus on removing complexity and simplifying experiences for all users involved. I'm experienced in creating multi-user workflows for overlapping experiences that can often occur with modern software today.
+                                        Often times I collaborate with product to support the product strategy and vision, while providing design input and research findings to refine the strategy.</p>
 <!--
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
