--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									<div class="content">
 										<header>
 											<h1>Jenny Tang</h1>
-                                            <h4>PRODUCT &middot; SERVICE DESIGN &middot; UX &middot; UI</h4>
+                                            <h4>PRODUCT DESIGN &middot; SERVICE DESIGN &middot; UX &middot; UI</h4>
 										</header>
 										<p>Hi there! I'm a designer who enjoys designing product solutions that focus on removing complexity and simplifying experiences for all users involved. I'm experienced in creating multi-user workflows for overlapping experiences that can often occur with modern software today.
                                         Often times I collaborate with product to support the product strategy and vision, while providing design input and research findings to refine the strategy.</p>
@@ -60,7 +60,7 @@
 							<!-- UX Company Projects -->
 								<section>
 									<header class="major">
-										<h2>UX: Company Projects</h2>
+										<h2>UX: Enterprise Projects</h2>
 									</header>
 									<div class="posts">
 										<article>
